src/main/java/ANTLR/OCL2RAParser.java
// Generated from /Users/novelistchan/Documents/OCLfo2SQL/OCL2RA/src/main/java/ocl2ra/ANTLR/OCL2RAParser.g4 by ANTLR 4.10.1
package ANTLR;

import java.util.List;
import org.antlr.v4.runtime.FailedPredicateException;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.RuleContext;
import org.antlr.v4.runtime.RuntimeMetaData;
import org.antlr.v4.runtime.Token;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.Vocabulary;
import org.antlr.v4.runtime.VocabularyImpl;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class OCL2RAParser extends Parser {

    static {
        RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
        new PredictionContextCache();
    public static final int
        SPACE = 1, EQ = 2, GT = 3, LT = 4, NE = 5, GE = 6, LE = 7, AND = 8, OR = 9, XOR = 10, IMPLY = 11,
        NOT = 12, AR = 13, DOT = 14, LB = 15, RB = 16, SEP = 17, ALL = 18, FA = 19, SE = 20, CTX = 21,
        COLON = 22, INV = 23, STRING = 24, INT = 25;
    public static final int
        RULE_oclText = 0, RULE_oclExpr = 1, RULE_oclContext = 2, RULE_oclInvariant = 3,
        RULE_oclInvName = 4, RULE_oclBool = 5, RULE_oclSet = 6, RULE_oclSingle = 7,
        RULE_oclObject = 8, RULE_oclRole = 9, RULE_oclAttr = 10, RULE_oclVar = 11,
        RULE_oclClass = 12, RULE_oclConstant = 13, RULE_compOp = 14, RULE_boolOp = 15;

    private static String[] makeRuleNames() {
        return new String[]{
            "oclText", "oclExpr", "oclContext", "oclInvariant", "oclInvName", "oclBool",
            "oclSet", "oclSingle", "oclObject", "oclRole", "oclAttr", "oclVar", "oclClass",
            "oclConstant", "compOp", "boolOp"
        };
    }

    public static final String[] ruleNames = makeRuleNames();

    private static String[] makeLiteralNames() {
        return new String[]{
            null, null, "'='", "'>'", "'<'", "'<>'", "'>='", "'<='", "'and'", "'or'",
            "'xor'", "'implies'", "'not'", "'->'", "'.'", "'('", "')'", "'|'", "'allInstances()'",
            "'forAll'", "'select'", "'context'", "':'", "'inv'"
        };
    }

    private static final String[] _LITERAL_NAMES = makeLiteralNames();

    private static String[] makeSymbolicNames() {
        return new String[]{
            null, "SPACE", "EQ", "GT", "LT", "NE", "GE", "LE", "AND", "OR", "XOR",
            "IMPLY", "NOT", "AR", "DOT", "LB", "RB", "SEP", "ALL", "FA", "SE", "CTX",
            "COLON", "INV", "STRING", "INT"
        };
    }

    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "OCL2RAParser.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public OCL2RAParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    public static class OclTextContext extends ParserRuleContext {

        public TerminalNode EOF() {
            return getToken(OCL2RAParser.EOF, 0);
        }

        public List<OclExprContext> oclExpr() {
            return getRuleContexts(OclExprContext.class);
        }

        public OclExprContext oclExpr(int i) {
            return getRuleContext(OclExprContext.class, i);
        }

        public OclTextContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_oclText;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OCL2RAParserListener) {
                ((OCL2RAParserListener) listener).enterOclText(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OCL2RAParserListener) {
                ((OCL2RAParserListener) listener).exitOclText(this);
            }
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OCL2RAParserVisitor) {
                return ((OCL2RAParserVisitor<? extends T>) visitor).visitOclText(this);
            } else {
                return visitor.visitChildren(this);
            }
        }
    }

    public final OclTextContext oclText() throws RecognitionException {
        OclTextContext _localctx = new OclTextContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_oclText);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(33);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(32);
                            oclExpr();
                        }
                    }
                    setState(35);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                } while (_la == CTX);
                setState(37);
                match(EOF);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class OclExprContext extends ParserRuleContext {

        public TerminalNode CTX() {
            return getToken(OCL2RAParser.CTX, 0);
        }

        public OclContextContext oclContext() {
            return getRuleContext(OclContextContext.class, 0);
        }

        public TerminalNode INV() {
            return getToken(OCL2RAParser.INV, 0);
        }

        public OclInvariantContext oclInvariant() {
            return getRuleContext(OclInvariantContext.class, 0);
        }

        public OclExprContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_oclExpr;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OCL2RAParserListener) {
                ((OCL2RAParserListener) listener).enterOclExpr(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OCL2RAParserListener) {
                ((OCL2RAParserListener) listener).exitOclExpr(this);
            }
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OCL2RAParserVisitor) {
                return ((OCL2RAParserVisitor<? extends T>) visitor).visitOclExpr(this);
            } else {
                return visitor.visitChildren(this);
            }
        }
    }

    public final OclExprContext oclExpr() throws RecognitionException {
        OclExprContext _localctx = new OclExprContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_oclExpr);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(39);
                match(CTX);
                setState(40);
                oclContext();
                setState(41);
                match(INV);
                setState(42);
                oclInvariant();
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class OclContextContext extends ParserRuleContext {

        public TerminalNode STRING() {
            return getToken(OCL2RAParser.STRING, 0);
        }

        public OclContextContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_oclContext;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OCL2RAParserListener) {
                ((OCL2RAParserListener) listener).enterOclContext(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OCL2RAParserListener) {
                ((OCL2RAParserListener) listener).exitOclContext(this);
            }
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OCL2RAParserVisitor) {
                return ((OCL2RAParserVisitor<? extends T>) visitor).visitOclContext(this);
            } else {
                return visitor.visitChildren(this);
            }
        }
    }

    public final OclContextContext oclContext() throws RecognitionException {
        OclContextContext _localctx = new OclContextContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_oclContext);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(44);
                match(STRING);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class OclInvariantContext extends ParserRuleContext {

        public OclInvNameContext oclInvName() {
            return getRuleContext(OclInvNameContext.class, 0);
        }

        public TerminalNode COLON() {
            return getToken(OCL2RAParser.COLON, 0);
        }

        public OclBoolContext oclBool() {
            return getRuleContext(OclBoolContext.class, 0);
        }

        public OclInvariantContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_oclInvariant;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OCL2RAParserListener) {
                ((OCL2RAParserListener) listener).enterOclInvariant(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OCL2RAParserListener) {
                ((OCL2RAParserListener) listener).exitOclInvariant(this);
            }
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OCL2RAParserVisitor) {
                return ((OCL2RAParserVisitor<? extends T>) visitor).visitOclInvariant(this);
            } else {
                return visitor.visitChildren(this);
            }
        }
    }

    public final OclInvariantContext oclInvariant() throws RecognitionException {
        OclInvariantContext _localctx = new OclInvariantContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_oclInvariant);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(46);
                oclInvName();
                setState(47);
                match(COLON);
                setState(48);
                oclBool(0);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class OclInvNameContext extends ParserRuleContext {

        public TerminalNode STRING() {
            return getToken(OCL2RAParser.STRING, 0);
        }

        public OclInvNameContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_oclInvName;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OCL2RAParserListener) {
                ((OCL2RAParserListener) listener).enterOclInvName(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OCL2RAParserListener) {
                ((OCL2RAParserListener) listener).exitOclInvName(this);
            }
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OCL2RAParserVisitor) {
                return ((OCL2RAParserVisitor<? extends T>) visitor).visitOclInvName(this);
            } else {
                return visitor.visitChildren(this);
            }
        }
    }

    public final OclInvNameContext oclInvName() throws RecognitionException {
        OclInvNameContext _localctx = new OclInvNameContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_oclInvName);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(50);
                match(STRING);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class OclBoolContext extends ParserRuleContext {

        public OclBoolContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_oclBool;
        }

        public OclBoolContext() {
        }

        public void copyFrom(OclBoolContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class BoolForAllContext extends OclBoolContext {

        public OclSetContext oclSet() {
            return getRuleContext(OclSetContext.class, 0);
        }

        public TerminalNode AR() {
            return getToken(OCL2RAParser.AR, 0);
        }

        public TerminalNode FA() {
            return getToken(OCL2RAParser.FA, 0);
        }

        public TerminalNode LB() {
            return getToken(OCL2RAParser.LB, 0);
        }

        public OclVarContext oclVar() {
            return getRuleContext(OclVarContext.class, 0);
        }

        public TerminalNode SEP() {
            return getToken(OCL2RAParser.SEP, 0);
        }

        public OclBoolContext oclBool() {
            return getRuleContext(OclBoolContext.class, 0);
        }

        public TerminalNode RB() {
            return getToken(OCL2RAParser.RB, 0);
        }

        public BoolForAllContext(OclBoolContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OCL2RAParserListener) {
                ((OCL2RAParserListener) listener).enterBoolForAll(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OCL2RAParserListener) {
                ((OCL2RAParserListener) listener).exitBoolForAll(this);
            }
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OCL2RAParserVisitor) {
                return ((OCL2RAParserVisitor<? extends T>) visitor).visitBoolForAll(this);
            } else {
                return visitor.visitChildren(this);
            }
        }
    }

    public static class BoolCompareContext extends OclBoolContext {

        public List<OclSingleContext> oclSingle() {
            return getRuleContexts(OclSingleContext.class);
        }

        public OclSingleContext oclSingle(int i) {
            return getRuleContext(OclSingleContext.class, i);
        }

        public CompOpContext compOp() {
            return getRuleContext(CompOpContext.class, 0);
        }

        public BoolCompareContext(OclBoolContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OCL2RAParserListener) {
                ((OCL2RAParserListener) listener).enterBoolCompare(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OCL2RAParserListener) {
                ((OCL2RAParserListener) listener).exitBoolCompare(this);
            }
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OCL2RAParserVisitor) {
                return ((OCL2RAParserVisitor<? extends T>) visitor).visitBoolCompare(this);
            } else {
                return visitor.visitChildren(this);
            }
        }
    }

    public static class BoolCalcContext extends OclBoolContext {

        public List<OclBoolContext> oclBool() {
            return getRuleContexts(OclBoolContext.class);
        }

        public OclBoolContext oclBool(int i) {
            return getRuleContext(OclBoolContext.class, i);
        }

        public BoolOpContext boolOp() {
            return getRuleContext(BoolOpContext.class, 0);
        }

        public BoolCalcContext(OclBoolContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OCL2RAParserListener) {
                ((OCL2RAParserListener) listener).enterBoolCalc(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OCL2RAParserListener) {
                ((OCL2RAParserListener) listener).exitBoolCalc(this);
            }
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OCL2RAParserVisitor) {
                return ((OCL2RAParserVisitor<? extends T>) visitor).visitBoolCalc(this);
            } else {
                return visitor.visitChildren(this);
            }
        }
    }

    public final OclBoolContext oclBool() throws RecognitionException {
        return oclBool(0);
    }

    private OclBoolContext oclBool(int _p) throws RecognitionException {
        ParserRuleContext _parentctx = _ctx;
        int _parentState = getState();
        OclBoolContext _localctx = new OclBoolContext(_ctx, _parentState);
        OclBoolContext _prevctx = _localctx;
        int _startState = 10;
        enterRecursionRule(_localctx, 10, RULE_oclBool, _p);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(66);
                _errHandler.sync(this);
                switch (getInterpreter().adaptivePredict(_input, 1, _ctx)) {
                    case 1: {
                        _localctx = new BoolForAllContext(_localctx);
                        _ctx = _localctx;
                        _prevctx = _localctx;

                        setState(53);
                        oclSet();
                        setState(54);
                        match(AR);
                        setState(55);
                        match(FA);
                        setState(56);
                        match(LB);
                        setState(57);
                        oclVar();
                        setState(58);
                        match(SEP);
                        setState(59);
                        oclBool(0);
                        setState(60);
                        match(RB);
                    }
                    break;
                    case 2: {
                        _localctx = new BoolCompareContext(_localctx);
                        _ctx = _localctx;
                        _prevctx = _localctx;
                        setState(62);
                        oclSingle();
                        setState(63);
                        compOp();
                        setState(64);
                        oclSingle();
                    }
                    break;
                }
                _ctx.stop = _input.LT(-1);
                setState(74);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 2, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        if (_parseListeners != null) {
                            triggerExitRuleEvent();
                        }
                        _prevctx = _localctx;
                        {
                            {
                                _localctx = new BoolCalcContext(
                                    new OclBoolContext(_parentctx, _parentState));
                                pushNewRecursionContext(_localctx, _startState, RULE_oclBool);
                                setState(68);
                                if (!(precpred(_ctx, 1))) {
                                    throw new FailedPredicateException(this, "precpred(_ctx, 1)");
                                }
                                setState(69);
                                boolOp();
                                setState(70);
                                oclBool(2);
                            }
                        }
                    }
                    setState(76);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 2, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            unrollRecursionContexts(_parentctx);
        }
        return _localctx;
    }

    public static class OclSetContext extends ParserRuleContext {

        public OclSetContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_oclSet;
        }

        public OclSetContext() {
        }

        public void copyFrom(OclSetContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class ClassAllContext extends OclSetContext {

        public OclClassContext oclClass() {
            return getRuleContext(OclClassContext.class, 0);
        }

        public TerminalNode DOT() {
            return getToken(OCL2RAParser.DOT, 0);
        }

        public TerminalNode ALL() {
            return getToken(OCL2RAParser.ALL, 0);
        }

        public ClassAllContext(OclSetContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OCL2RAParserListener) {
                ((OCL2RAParserListener) listener).enterClassAll(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OCL2RAParserListener) {
                ((OCL2RAParserListener) listener).exitClassAll(this);
            }
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OCL2RAParserVisitor) {
                return ((OCL2RAParserVisitor<? extends T>) visitor).visitClassAll(this);
            } else {
                return visitor.visitChildren(this);
            }
        }
    }

    public final OclSetContext oclSet() throws RecognitionException {
        OclSetContext _localctx = new OclSetContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_oclSet);
        try {
            _localctx = new ClassAllContext(_localctx);
            enterOuterAlt(_localctx, 1);
            {
                setState(77);
                oclClass();
                setState(78);
                match(DOT);
                setState(79);
                match(ALL);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class OclSingleContext extends ParserRuleContext {

        public OclSingleContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_oclSingle;
        }

        public OclSingleContext() {
        }

        public void copyFrom(OclSingleContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class ConstantSingleContext extends OclSingleContext {

        public OclConstantContext oclConstant() {
            return getRuleContext(OclConstantContext.class, 0);
        }

        public ConstantSingleContext(OclSingleContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OCL2RAParserListener) {
                ((OCL2RAParserListener) listener).enterConstantSingle(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OCL2RAParserListener) {
                ((OCL2RAParserListener) listener).exitConstantSingle(this);
            }
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OCL2RAParserVisitor) {
                return ((OCL2RAParserVisitor<? extends T>) visitor).visitConstantSingle(this);
            } else {
                return visitor.visitChildren(this);
            }
        }
    }

    public static class ObjectSingleContext extends OclSingleContext {

        public OclObjectContext oclObject() {
            return getRuleContext(OclObjectContext.class, 0);
        }

        public TerminalNode DOT() {
            return getToken(OCL2RAParser.DOT, 0);
        }

        public OclAttrContext oclAttr() {
            return getRuleContext(OclAttrContext.class, 0);
        }

        public ObjectSingleContext(OclSingleContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OCL2RAParserListener) {
                ((OCL2RAParserListener) listener).enterObjectSingle(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OCL2RAParserListener) {
                ((OCL2RAParserListener) listener).exitObjectSingle(this);
            }
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OCL2RAParserVisitor) {
                return ((OCL2RAParserVisitor<? extends T>) visitor).visitObjectSingle(this);
            } else {
                return visitor.visitChildren(this);
            }
        }
    }

    public final OclSingleContext oclSingle() throws RecognitionException {
        OclSingleContext _localctx = new OclSingleContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_oclSingle);
        try {
            setState(86);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 3, _ctx)) {
                case 1:
                    _localctx = new ObjectSingleContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                {
                    setState(81);
                    oclObject(0);
                    setState(82);
                    match(DOT);
                    setState(83);
                    oclAttr();
                }
                break;
                case 2:
                    _localctx = new ConstantSingleContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                {
                    setState(85);
                    oclConstant();
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class OclObjectContext extends ParserRuleContext {

        public OclObjectContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_oclObject;
        }

        public OclObjectContext() {
        }

        public void copyFrom(OclObjectContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class RoleObjContext extends OclObjectContext {

        public OclObjectContext oclObject() {
            return getRuleContext(OclObjectContext.class, 0);
        }

        public TerminalNode DOT() {
            return getToken(OCL2RAParser.DOT, 0);
        }

        public OclRoleContext oclRole() {
            return getRuleContext(OclRoleContext.class, 0);
        }

        public RoleObjContext(OclObjectContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OCL2RAParserListener) {
                ((OCL2RAParserListener) listener).enterRoleObj(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OCL2RAParserListener) {
                ((OCL2RAParserListener) listener).exitRoleObj(this);
            }
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OCL2RAParserVisitor) {
                return ((OCL2RAParserVisitor<? extends T>) visitor).visitRoleObj(this);
            } else {
                return visitor.visitChildren(this);
            }
        }
    }

    public static class VarObjContext extends OclObjectContext {

        public OclVarContext oclVar() {
            return getRuleContext(OclVarContext.class, 0);
        }

        public VarObjContext(OclObjectContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OCL2RAParserListener) {
                ((OCL2RAParserListener) listener).enterVarObj(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OCL2RAParserListener) {
                ((OCL2RAParserListener) listener).exitVarObj(this);
            }
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OCL2RAParserVisitor) {
                return ((OCL2RAParserVisitor<? extends T>) visitor).visitVarObj(this);
            } else {
                return visitor.visitChildren(this);
            }
        }
    }

    public final OclObjectContext oclObject() throws RecognitionException {
        return oclObject(0);
    }

    private OclObjectContext oclObject(int _p) throws RecognitionException {
        ParserRuleContext _parentctx = _ctx;
        int _parentState = getState();
        OclObjectContext _localctx = new OclObjectContext(_ctx, _parentState);
        OclObjectContext _prevctx = _localctx;
        int _startState = 16;
        enterRecursionRule(_localctx, 16, RULE_oclObject, _p);
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                {
                    _localctx = new VarObjContext(_localctx);
                    _ctx = _localctx;
                    _prevctx = _localctx;

                    setState(89);
                    oclVar();
                }
                _ctx.stop = _input.LT(-1);
                setState(96);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 4, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        if (_parseListeners != null) {
                            triggerExitRuleEvent();
                        }
                        _prevctx = _localctx;
                        {
                            {
                                _localctx = new RoleObjContext(
                                    new OclObjectContext(_parentctx, _parentState));
                                pushNewRecursionContext(_localctx, _startState, RULE_oclObject);
                                setState(91);
                                if (!(precpred(_ctx, 1))) {
                                    throw new FailedPredicateException(this, "precpred(_ctx, 1)");
                                }
                                setState(92);
                                match(DOT);
                                setState(93);
                                oclRole();
                            }
                        }
                    }
                    setState(98);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 4, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            unrollRecursionContexts(_parentctx);
        }
        return _localctx;
    }

    public static class OclRoleContext extends ParserRuleContext {

        public TerminalNode STRING() {
            return getToken(OCL2RAParser.STRING, 0);
        }

        public OclRoleContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_oclRole;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OCL2RAParserListener) {
                ((OCL2RAParserListener) listener).enterOclRole(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OCL2RAParserListener) {
                ((OCL2RAParserListener) listener).exitOclRole(this);
            }
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OCL2RAParserVisitor) {
                return ((OCL2RAParserVisitor<? extends T>) visitor).visitOclRole(this);
            } else {
                return visitor.visitChildren(this);
            }
        }
    }

    public final OclRoleContext oclRole() throws RecognitionException {
        OclRoleContext _localctx = new OclRoleContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_oclRole);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(99);
                match(STRING);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class OclAttrContext extends ParserRuleContext {

        public TerminalNode STRING() {
            return getToken(OCL2RAParser.STRING, 0);
        }

        public OclAttrContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_oclAttr;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof OCL2RAParserListener) {
                ((OCL2RAParserListener) listener).enterOclAttr(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof OCL2RAParserListener) {
                ((OCL2RAParserListener) listener).exitOclAttr(this);
            }
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof OCL2RAParserVisitor) {
                return ((OCL2RAParserVisitor<? extends T>) visitor).visitOclAttr(this);
            } else {
                return visitor.visitChildren(this);
            }
        }
    }
